--- a/src/app/Component/product/display-products/display-products.component.html
+++ b/src/app/Component/product/display-products/display-products.component.html
@@ -13,6 +13,7 @@
                 <th> Description </th>
                 <th> Unit Price </th>
                 <th> Quantity</th>
+                <th> Action</th>
             </tr>
         </thead>
         <tbody>
