Added Toastr and some styling done

--- a/src/app/Component/product/display-products/display-products.component.html
+++ b/src/app/Component/product/display-products/display-products.component.html
@@ -24,8 +24,8 @@
                 <td> {{ product.unitPrice }} </td>
                 <td> {{ product.quantity }} </td>
                 <td>
-                    <button (click) = "modifyProduct(product.id)" class="btn btn-info" style="margin-right: 10px;"> Modify </button>
-                    <button (click) = "removeProduct(product.id)" class="btn btn-danger" style="margin-right: 10px;"> Remove </button>                
+                    <button (click) = "modifyProduct(product.id)" class="btn btn-sm btn-info" style="margin-right: 10px;"> Modify </button>
+                    <button (click) = "removeProduct(product.id)" class="btn btn-sm btn-danger" style="margin-right: 10px;"> Remove </button>                
                 </td>
             </tr>
         </tbody>
