--- a/src/app/Component/product/add-product/add-product.component.html
+++ b/src/app/Component/product/add-product/add-product.component.html
@@ -1,4 +1,4 @@
-<div class="container col-md-6 offset-mid-3">
+<div class="container col-md-6 offset-mid-3 ">
     <h3 class="text-center"> Add Product </h3>
     <form (ngSubmit) = "onSubmit()" autocomplete="off">
 
@@ -27,6 +27,8 @@
             <input type="number" class="form-control" style="margin-bottom: 10px" id="productQuantity" [(ngModel)] = "product.quantity" name="productQuantity">
         </div>
 
-        <button class="btn btn-success" type="submit"> Submit </button>
+        <div class="text-center">
+            <button class="btn btn-success" type="submit">Submit</button>
+        </div>
     </form>
 </div>
