About page modified

--- a/src/app/Component/about/about.component.html
+++ b/src/app/Component/about/about.component.html
@@ -1,1 +1,21 @@
-<p>about works!</p>
+
+<div class="container mt-5">
+    <div class="row">
+      <div class="col-md-8 offset-md-2">
+        <h2 class="text-center mb-4">About Us</h2>
+        <p>
+          Welcome to our Product Management application! We are dedicated to providing you with the best tools to manage your products efficiently.
+        </p>
+        <p>
+          Our application allows you to add, edit, and delete products with ease. You can also view detailed information about each product, including its name, description, unit price, and quantity.
+        </p>
+        <p>
+          Whether you're a small business owner or a large enterprise, our Product Management app is designed to meet your needs and streamline your workflow.
+        </p>
+        <p>
+          Thank you for choosing our app. If you have any questions or feedback, please feel free to contact us.
+        </p>
+      </div>
+    </div>
+  </div>
+  
