--- a/src/app/Component/register/register.component.html
+++ b/src/app/Component/register/register.component.html
@@ -1,20 +1,20 @@
 <div class="abc">
     <h2 style="text-align:center; margin-bottom:15px;">Register here</h2>
-    <form [formGroup]="myReactiveForm" (ngSubmit)="onSubmit()">
+    <form [formGroup]="userForm" (ngSubmit)="onSubmit()">
         <div class="mb-3">
             <label for="name" class="form-label">Name</label>
             <input type="text" class="form-control" id="name" formControlName="name" />
             <small class="text-danger" *ngIf="
-              myReactiveForm.get('name')?.invalid &&
-              myReactiveForm.get('name')?.touched
+              userForm.get('name')?.invalid &&
+              userForm.get('name')?.touched
             ">Please enter name</small>
         </div>
         <div class="mb-3">
             <label for="Email" class="form-label">Email address</label>
             <input type="email" class="form-control" id="email" formControlName="email" />
             <small class="text-danger" *ngIf="
-              myReactiveForm.get('email')?.invalid &&
-              myReactiveForm.get('email')?.touched
+              userForm.get('email')?.invalid &&
+              userForm.get('email')?.touched
             ">Please enter valid email</small>
         </div>
 
@@ -29,7 +29,7 @@
             <input type="text" class="form-control" formControlName="password" id="password">
         </div>
 
-        <button [disabled]="!myReactiveForm.valid" routerLink="/login" type="submit" class="btn btn-sm btn-primary">
+        <button [disabled]="!userForm.valid" type="submit" class="btn btn-sm btn-primary">
             Submit
         </button>
     </form>
